--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Jalop's Resume</title>
+    <title>Jalop_Curriculum Vitae</title>
     <link rel="stylesheet" href="resume.css" />
   </head>
   <body>
